--- a/style/style.css
+++ b/style/style.css
@@ -5,13 +5,14 @@
 }
 
 body {
-  background-color: #f1f1f1;
-  width: 1020px;
+  background-color: #333030;
+  width: auto;
+  min-width: 1800px;
   margin-right: auto;
   margin-left: auto;
   display: block;
   font-family: "VT323", sans-serif;
-  color: #494949;
+  color: #b4afaf;
   letter-spacing: 0.1rem;
   font-size: 17px;
   font-family: "Calibri", Serif;
@@ -33,6 +34,7 @@ body {
 
 .nav-links li {
   list-style: none;
+  width: 350px;
 }
 
 .nav-links a {
@@ -40,4 +42,8 @@ body {
   text-decoration: none;
   font-weight: bold;
   color: #494949;
+}
+
+.loginUser{
+font-size: 12px !important;
 }
