--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 body {
   background-color: #333030;
   width: auto;
-  min-width: 1800px;
+  /* min-width: 1800px; */
   margin-right: auto;
   margin-left: auto;
   display: block;
@@ -24,6 +24,8 @@ body {
   justify-content: space-around;
   align-items: center;
   min-height: 10vh;
+  width: 100%;
+  align-items: center;
 }
 
 .nav-links {
@@ -41,9 +43,44 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  color: #494949;
+  color: #272626;
 }
 
 .loginUser{
-font-size: 12px !important;
+font-size: 12px;
 }
+/* ---------- open mainTableList ----------*/
+.mainTableList{
+  width: 100%;
+  border: 1px solid black;
+  text-align: center;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.mainTableList thead{
+  background-color:#dbd3d3;
+}
+
+.mainTableList thead tr th,.mainTableList tbody tr td{
+  border: 1px solid black;
+}
+
+.mainTableList thead tr .widthMainTableListId{
+  width: 70px;
+}
+
+.mainTableList thead tr .widthMainTableListName{
+  width: 200px;
+}
+
+.mainTableList thead tr .widthMainTableListOpis{
+  min-width: 400px;
+}
+
+.mainTableList thead tr .widthMainTableListStatus{
+  width: 200px;
+}
+
+/* ---------- close mainTableList ----------*/
+
