boodstrap style and repair hamburger

--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 body {
-  background-color: #333030;
+  background-color: #333030 ;
   width: auto;
   /* min-width: 1800px; */
   margin-right: auto;
@@ -21,7 +22,7 @@ body {
 
 a:link, a:visited, a:active{
   text-decoration: none;
-  color: #fff !important;
+  /* color: #fff ; */
 }
 
 .loginUser{
