--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ font-size: 12px;
 }
 /* ---------- open mainTableList ----------*/
 .mainTableList{
-  width: 100%;
+  /* width: 100%; */
   border: 1px solid black;
   text-align: center;
   word-wrap: break-word;
